--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -77,7 +77,7 @@ interval=10
 
 [ping]
 command=echo  $(ping google.com -c 1 | tail -n1 | cut -d'/' -f 6 | cut -d'.' -f1) ms
-interval=10
+interval=5
 
 # Disk usage
 #
@@ -108,12 +108,12 @@ interval=3
 [cpu_usage]
 command=echo  $(~/.config/i3/scripts/cpu_usage | head -n1)
 #min_width=CPU: 100.00%
-interval=2
+interval=1
 
 [CPU-temperature]
 label=
 command=~/.config/i3/scripts/temperature
-interval=30
+interval=10
 #T_WARN=70
 #T_CRIT=90
 #SENSOR_CHIP=""
@@ -133,8 +133,8 @@ interval=30
 
 # Battery indicator
 [battery]
-command=~/.config/i3/scripts/battery2
-interval=30
+command=echo $(~/.config/i3/scripts/battery3 | tail -n1)
+interval=5
 
 #set power-profile
 # [ppd_menu]
@@ -143,10 +143,9 @@ interval=30
 # color=#407437
 
 #Show the current power-profile
-[ppd-status]
-command=~/.config/i3/scripts/ppd-status
-interval=5
-
+# [ppd-status]
+# command=~/.config/i3/scripts/ppd-status
+# interval=1
 
 # display keyboard layout name
 # for keyboard layouts switcher
