--- a/.config/kitty/kitty_g14.conf
+++ b/.config/kitty/kitty_g14.conf
@@ -1,2 +1,7 @@
-font_family      HackNerdFontMono
 font_size 11.0
+
+# font_family      VictorMonoNerdFontMono
+
+font_family      ProFontIIxNerdFontMono
+# bold_font   HackNerdFontMono
+# italic_font IosevkaNerdFontMono
