--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -25,5 +25,14 @@ listen_on unix:@mykitty
 
 select_by_word_characters @-./_~?&=%+#:
 
+cursor_shape beam
+cursor_beam_thickness 1.5
+cursor_underline_thickness 2.0
+cursor_blink_interval 0
+cursor_stop_blinking_after 0
+cursor_trail 1
+cursor_trail_decay 0.1 0.3
+cursor_trail_start_threshold 2
+
 # Include local settings
 include kitty-local.conf
